fix(plugin): align with real SDK contracts; add .gitignore
Verified end-to-end compilation against the published SDKs and corrected
divergences from my earlier assumptions:

- SentimentAnalyzeStage: convert from WTransformStage to WPartitionStage.
  WTransformStage in the real Scala SDK is stateless (no ctx) — only context-
  aware stages can call ctx.llm. WPartitionStage is also a better fit
  operationally (LLM call amortization at partition scope).
- ServiceLoader registration: META-INF/services/...WPartitionStage replaces
  ...WTransformStage.
- ctx.llm is a val/def (singular), not a method — `ctx.llm.infer(prompt)`.
- SentimentSaveStage: TapOps value class moved out to companion object —
  Scala forbids value classes nested in classes.

SDK version bumps:
- api/pom.xml: webrobot-jersey-plugin-sdk v0.1.0 → v0.2.0 (DbService,
  OrgContext, @OrgScoped). Added javax.servlet-api provided dep.
- etl/build.gradle.kts: webrobot-plugin-sdk v0.2.1 (LlmService).
  Switched repository from GitHub Packages (auth-required) to JitPack (public),
  Scala 2.12 → 2.13 to match SDK build, JDK 17 toolchain.

REST API rewritten to use:
- @OrgScoped on the resource class (filter rejects requests without org JWT)
- ctx.orgContext(req).organizationId() instead of OrganizationContextHelper
- ctx.db().query/execute() instead of raw PreparedStatement boilerplate

Both modules build cleanly:
- api/target/webrobot-sentimental-plugin-api-0.1.0.jar
- etl/build/libs/etl-0.1.0.jar (5 stages registered via ServiceLoader)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>