@@ -1,8 +1,9 @@
 package eu.webrobot.sentiment;
 
+import eu.webrobot.plugin.jersey.OrgContext;
+import eu.webrobot.plugin.jersey.OrgScoped;
 import eu.webrobot.plugin.jersey.WebroPlugin;
 import eu.webrobot.plugin.jersey.WebroPluginContext;
-import eu.webrobot.api.security.OrganizationContextHelper;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.ws.rs.*;
@@ -12,14 +13,17 @@ import java.util.*;
 /**
  * REST API for the sentimental plugin.
  *
- * All endpoints are scoped by the org_id resolved from the JWT — never trust query/body input.
- * Response shapes are chart-ready: time-series endpoints return arrays of {ts, ...}; distribution
- * endpoints return label→count maps; emotion endpoints return emotion→score maps for radar charts.
+ * All endpoints are scoped by org_id resolved from the JWT (via {@link OrgContext}).
+ * The whole resource is annotated {@link OrgScoped} — anonymous requests fail 401 at the
+ * filter, before any handler runs.
  *
- * Designed to be consumed both by the dashboard UI and by AI agents (Claude Code MCP tools).
+ * Response shapes are chart-ready: time-series → array of {ts, ...}; distributions →
+ * label→count map; emotions → emotion→score map (radar). Designed for both the dashboard
+ * UI and AI-agent (Claude Code MCP) consumption.
  */
 @Path("/webrobot/api/sentiment")
 @Produces(MediaType.APPLICATION_JSON)
+@OrgScoped
 public class SentimentPlugin extends WebroPlugin {
 
     private WebroPluginContext ctx;
@@ -34,21 +38,20 @@ public class SentimentPlugin extends WebroPlugin {
 
     // ── On-demand single-text analysis ────────────────────────────────────────
 
-    /** POST /analyze   { text, source_type?, save?, source_url?, author?, external_id?, published_at? } */
     @POST
     @Path("/analyze")
     @Consumes(MediaType.APPLICATION_JSON)
     public Response analyze(Map<String, Object> body, @Context HttpServletRequest req) {
-        String orgId = OrganizationContextHelper.getOrganizationId(req);
+        String orgId = ctx.orgContext(req).organizationId();
         String text  = String.valueOf(body.getOrDefault("text", "")).trim();
         if (text.isEmpty()) return bad("Missing 'text' field");
-        if (!ctx.llm().isAvailable()) return Response.status(503).entity(Map.of("error", "No LLM provider configured")).build();
+        if (!ctx.llm().isAvailable())
+            return Response.status(503).entity(Map.of("error", "No LLM provider configured")).build();
 
         String response = ctx.llm().infer(SentimentLlmPrompt.build(text));
         Map<String, Object> parsed = SentimentLlmPrompt.parse(response);
 
-        boolean save = parseBool(body.get("save"), false);
-        if (save) {
+        if (parseBool(body.get("save"), false)) {
             String sourceType = String.valueOf(body.getOrDefault("source_type", "other"));
             persistFromApi(orgId, sourceType, body, text, parsed, response);
             parsed.put("saved", true);
@@ -56,9 +59,8 @@ public class SentimentPlugin extends WebroPlugin {
         return Response.ok(parsed).build();
     }
 
-    // ── Time series (line/area chart) ────────────────────────────────────────
+    // ── Time series ──────────────────────────────────────────────────────────
 
-    /** GET /timeseries?source_type=&from=&to=&bucket=day|week|month */
     @GET
     @Path("/timeseries")
     public Response timeseries(@QueryParam("source_type") String sourceType,
@@ -66,13 +68,12 @@ public class SentimentPlugin extends WebroPlugin {
                                @QueryParam("to")          String toDate,
                                @QueryParam("bucket")      @DefaultValue("day") String bucket,
                                @Context HttpServletRequest req) {
-        String orgId = OrganizationContextHelper.getOrganizationId(req);
+        String orgId = ctx.orgContext(req).organizationId();
         String trunc = sanitizeBucket(bucket);
 
         StringBuilder sql = new StringBuilder(
             "SELECT date_trunc('" + trunc + "', published_at)::date AS ts, " +
-            "       COUNT(*) AS count, " +
-            "       AVG(polarity) AS avg_polarity, " +
+            "       COUNT(*) AS count, AVG(polarity) AS avg_polarity, " +
             "       COUNT(*) FILTER (WHERE label='positive') AS positive, " +
             "       COUNT(*) FILTER (WHERE label='negative') AS negative, " +
             "       COUNT(*) FILTER (WHERE label='neutral')  AS neutral " +
@@ -80,34 +81,34 @@ public class SentimentPlugin extends WebroPlugin {
         );
         List<Object> params = new ArrayList<>();
         params.add(orgId);
-        if (sourceType != null && !sourceType.isEmpty()) { sql.append("AND source_type = ? "); params.add(sourceType); }
-        if (fromDate   != null && !fromDate.isEmpty())   { sql.append("AND published_at >= ?::date "); params.add(fromDate); }
-        if (toDate     != null && !toDate.isEmpty())     { sql.append("AND published_at <  ?::date "); params.add(toDate); }
+        if (notEmpty(sourceType)) { sql.append("AND source_type = ? ");        params.add(sourceType); }
+        if (notEmpty(fromDate))   { sql.append("AND published_at >= ?::date "); params.add(fromDate); }
+        if (notEmpty(toDate))     { sql.append("AND published_at <  ?::date "); params.add(toDate); }
         sql.append("GROUP BY ts ORDER BY ts ASC");
 
-        List<Map<String, Object>> rows = ctx.db().query(sql.toString(), params);
-        return Response.ok(Map.of("series", rows, "bucket", trunc)).build();
+        return Response.ok(Map.of(
+            "series", ctx.db().query(sql.toString(), params),
+            "bucket", trunc)).build();
     }
 
-    // ── Label distribution (pie/donut) ────────────────────────────────────────
+    // ── Label distribution ───────────────────────────────────────────────────
 
-    /** GET /distribution?source_type=&from=&to= */
     @GET
     @Path("/distribution")
     public Response distribution(@QueryParam("source_type") String sourceType,
                                  @QueryParam("from")        String fromDate,
                                  @QueryParam("to")          String toDate,
                                  @Context HttpServletRequest req) {
-        String orgId = OrganizationContextHelper.getOrganizationId(req);
+        String orgId = ctx.orgContext(req).organizationId();
 
         StringBuilder sql = new StringBuilder(
             "SELECT label, COUNT(*) AS count, AVG(polarity) AS avg_polarity " +
             "FROM sentiment_documents WHERE org_id = ? "
         );
         List<Object> params = new ArrayList<>(); params.add(orgId);
-        if (sourceType != null && !sourceType.isEmpty()) { sql.append("AND source_type = ? "); params.add(sourceType); }
-        if (fromDate   != null && !fromDate.isEmpty())   { sql.append("AND published_at >= ?::date "); params.add(fromDate); }
-        if (toDate     != null && !toDate.isEmpty())     { sql.append("AND published_at <  ?::date "); params.add(toDate); }
+        if (notEmpty(sourceType)) { sql.append("AND source_type = ? ");         params.add(sourceType); }
+        if (notEmpty(fromDate))   { sql.append("AND published_at >= ?::date "); params.add(fromDate); }
+        if (notEmpty(toDate))     { sql.append("AND published_at <  ?::date "); params.add(toDate); }
         sql.append("GROUP BY label");
 
         Map<String, Object> dist = new LinkedHashMap<>();
@@ -117,9 +118,8 @@ public class SentimentPlugin extends WebroPlugin {
         return Response.ok(Map.of("distribution", dist)).build();
     }
 
-    // ── Emotion radar (Plutchik 8) ────────────────────────────────────────────
+    // ── Emotion radar ────────────────────────────────────────────────────────
 
-    /** GET /emotions?entity_text=&entity_type=&from=&to= */
     @GET
     @Path("/emotions")
     public Response emotions(@QueryParam("entity_text") String entityText,
@@ -127,25 +127,25 @@ public class SentimentPlugin extends WebroPlugin {
                              @QueryParam("from")        String fromDate,
                              @QueryParam("to")          String toDate,
                              @Context HttpServletRequest req) {
-        String orgId = OrganizationContextHelper.getOrganizationId(req);
+        String orgId = ctx.orgContext(req).organizationId();
 
         StringBuilder sql = new StringBuilder(
             "SELECT em.emotion, AVG(em.score) AS avg_score, COUNT(DISTINCT d.id) AS doc_count " +
             "FROM sentiment_documents d JOIN sentiment_emotions em ON em.document_id = d.id "
         );
         List<Object> params = new ArrayList<>(); params.add(orgId);
-        if (entityText != null && !entityText.isEmpty()) {
+        if (notEmpty(entityText)) {
             sql.append("JOIN sentiment_entities e ON e.document_id = d.id ");
             sql.append("WHERE d.org_id = ? AND e.text ILIKE ? ");
             params.add(entityText);
         } else {
             sql.append("WHERE d.org_id = ? ");
         }
-        if (entityType != null && !entityType.isEmpty() && entityText != null && !entityText.isEmpty()) {
+        if (notEmpty(entityType) && notEmpty(entityText)) {
             sql.append("AND e.entity_type = ? "); params.add(entityType);
         }
-        if (fromDate != null && !fromDate.isEmpty()) { sql.append("AND d.published_at >= ?::date "); params.add(fromDate); }
-        if (toDate   != null && !toDate.isEmpty())   { sql.append("AND d.published_at <  ?::date "); params.add(toDate); }
+        if (notEmpty(fromDate)) { sql.append("AND d.published_at >= ?::date "); params.add(fromDate); }
+        if (notEmpty(toDate))   { sql.append("AND d.published_at <  ?::date "); params.add(toDate); }
         sql.append("GROUP BY em.emotion ORDER BY em.emotion");
 
         Map<String, Object> radar = new LinkedHashMap<>();
@@ -155,9 +155,8 @@ public class SentimentPlugin extends WebroPlugin {
         return Response.ok(Map.of("emotions", radar)).build();
     }
 
-    // ── Top entities (ranked bar chart) ───────────────────────────────────────
+    // ── Top entities ─────────────────────────────────────────────────────────
 
-    /** GET /entities/top?type=&from=&to=&limit= */
     @GET
     @Path("/entities/top")
     public Response topEntities(@QueryParam("type")  String entityType,
@@ -165,7 +164,7 @@ public class SentimentPlugin extends WebroPlugin {
                                 @QueryParam("to")    String toDate,
                                 @QueryParam("limit") @DefaultValue("20") int limit,
                                 @Context HttpServletRequest req) {
-        String orgId = OrganizationContextHelper.getOrganizationId(req);
+        String orgId = ctx.orgContext(req).organizationId();
 
         StringBuilder sql = new StringBuilder(
             "SELECT e.text AS entity, e.entity_type AS type, COUNT(*) AS count, " +
@@ -176,18 +175,17 @@ public class SentimentPlugin extends WebroPlugin {
             "WHERE e.org_id = ? "
         );
         List<Object> params = new ArrayList<>(); params.add(orgId);
-        if (entityType != null && !entityType.isEmpty()) { sql.append("AND e.entity_type = ? "); params.add(entityType); }
-        if (fromDate   != null && !fromDate.isEmpty())   { sql.append("AND d.published_at >= ?::date "); params.add(fromDate); }
-        if (toDate     != null && !toDate.isEmpty())     { sql.append("AND d.published_at <  ?::date "); params.add(toDate); }
+        if (notEmpty(entityType)) { sql.append("AND e.entity_type = ? ");         params.add(entityType); }
+        if (notEmpty(fromDate))   { sql.append("AND d.published_at >= ?::date "); params.add(fromDate); }
+        if (notEmpty(toDate))     { sql.append("AND d.published_at <  ?::date "); params.add(toDate); }
         sql.append("GROUP BY e.text, e.entity_type ORDER BY count DESC LIMIT ?");
         params.add(limit);
 
         return Response.ok(Map.of("entities", ctx.db().query(sql.toString(), params))).build();
     }
 
-    // ── Compare entities over time (multi-series line) ────────────────────────
+    // ── Compare entities over time ───────────────────────────────────────────
 
-    /** GET /compare?entities=A,B,C&from=&to=&bucket=day */
     @GET
     @Path("/compare")
     public Response compare(@QueryParam("entities") String entitiesCsv,
@@ -195,36 +193,34 @@ public class SentimentPlugin extends WebroPlugin {
                             @QueryParam("to")       String toDate,
                             @QueryParam("bucket")   @DefaultValue("day") String bucket,
                             @Context HttpServletRequest req) {
-        String orgId = OrganizationContextHelper.getOrganizationId(req);
-        if (entitiesCsv == null || entitiesCsv.isEmpty()) return bad("entities query param required");
+        String orgId = ctx.orgContext(req).organizationId();
+        if (!notEmpty(entitiesCsv)) return bad("entities query param required");
         String trunc = sanitizeBucket(bucket);
 
         List<String> entities = Arrays.stream(entitiesCsv.split(","))
-                .map(String::trim).filter(s -> !s.isEmpty()).toList();
+                .map(String::trim).filter(s -> !s.isEmpty())
+                .collect(java.util.stream.Collectors.toList());
 
         Map<String, List<Map<String, Object>>> series = new LinkedHashMap<>();
         for (String entity : entities) {
             StringBuilder sql = new StringBuilder(
                 "SELECT date_trunc('" + trunc + "', d.published_at)::date AS ts, " +
-                "       COUNT(*) AS count, " +
-                "       AVG(COALESCE(a.polarity, d.polarity)) AS avg_polarity " +
-                "FROM sentiment_entities e " +
-                "JOIN  sentiment_documents d ON d.id = e.document_id " +
+                "       COUNT(*) AS count, AVG(COALESCE(a.polarity, d.polarity)) AS avg_polarity " +
+                "FROM sentiment_entities e JOIN sentiment_documents d ON d.id = e.document_id " +
                 "LEFT JOIN sentiment_aspects a ON a.document_id = d.id AND a.entity_id = e.id " +
                 "WHERE e.org_id = ? AND e.text ILIKE ? AND d.published_at IS NOT NULL "
             );
             List<Object> params = new ArrayList<>(); params.add(orgId); params.add(entity);
-            if (fromDate != null && !fromDate.isEmpty()) { sql.append("AND d.published_at >= ?::date "); params.add(fromDate); }
-            if (toDate   != null && !toDate.isEmpty())   { sql.append("AND d.published_at <  ?::date "); params.add(toDate); }
+            if (notEmpty(fromDate)) { sql.append("AND d.published_at >= ?::date "); params.add(fromDate); }
+            if (notEmpty(toDate))   { sql.append("AND d.published_at <  ?::date "); params.add(toDate); }
             sql.append("GROUP BY ts ORDER BY ts ASC");
             series.put(entity, ctx.db().query(sql.toString(), params));
         }
         return Response.ok(Map.of("bucket", trunc, "series", series)).build();
     }
 
-    // ── Co-occurrence (network/heatmap) ───────────────────────────────────────
+    // ── Co-occurrence ────────────────────────────────────────────────────────
 
-    /** GET /cooccurrence?entity=&from=&to=&limit= */
     @GET
     @Path("/cooccurrence")
     public Response cooccurrence(@QueryParam("entity") String entity,
@@ -232,8 +228,8 @@ public class SentimentPlugin extends WebroPlugin {
                                  @QueryParam("to")     String toDate,
                                  @QueryParam("limit")  @DefaultValue("30") int limit,
                                  @Context HttpServletRequest req) {
-        String orgId = OrganizationContextHelper.getOrganizationId(req);
-        if (entity == null || entity.isEmpty()) return bad("entity query param required");
+        String orgId = ctx.orgContext(req).organizationId();
+        if (!notEmpty(entity)) return bad("entity query param required");
 
         StringBuilder sql = new StringBuilder(
             "SELECT e2.text AS co_entity, e2.entity_type AS type, " +
@@ -244,17 +240,16 @@ public class SentimentPlugin extends WebroPlugin {
             "WHERE e1.org_id = ? AND e1.text ILIKE ? "
         );
         List<Object> params = new ArrayList<>(); params.add(orgId); params.add(entity);
-        if (fromDate != null && !fromDate.isEmpty()) { sql.append("AND d.published_at >= ?::date "); params.add(fromDate); }
-        if (toDate   != null && !toDate.isEmpty())   { sql.append("AND d.published_at <  ?::date "); params.add(toDate); }
+        if (notEmpty(fromDate)) { sql.append("AND d.published_at >= ?::date "); params.add(fromDate); }
+        if (notEmpty(toDate))   { sql.append("AND d.published_at <  ?::date "); params.add(toDate); }
         sql.append("GROUP BY e2.text, e2.entity_type ORDER BY count DESC LIMIT ?");
         params.add(limit);
 
         return Response.ok(Map.of("entity", entity, "cooccurring", ctx.db().query(sql.toString(), params))).build();
     }
 
-    // ── Recent documents (raw browse) ─────────────────────────────────────────
+    // ── Recent documents (raw drill-down) ────────────────────────────────────
 
-    /** GET /documents?source_type=&label=&entity=&from=&to=&limit= */
     @GET
     @Path("/documents")
     public Response documents(@QueryParam("source_type") String sourceType,
@@ -264,14 +259,14 @@ public class SentimentPlugin extends WebroPlugin {
                               @QueryParam("to")          String toDate,
                               @QueryParam("limit")       @DefaultValue("100") int limit,
                               @Context HttpServletRequest req) {
-        String orgId = OrganizationContextHelper.getOrganizationId(req);
+        String orgId = ctx.orgContext(req).organizationId();
         StringBuilder sql = new StringBuilder(
             "SELECT DISTINCT d.id, d.source_type, d.source_url, d.author, d.published_at, " +
             "       d.label, d.polarity, d.confidence, d.language, d.text_snippet " +
             "FROM sentiment_documents d "
         );
         List<Object> params = new ArrayList<>();
-        if (entity != null && !entity.isEmpty()) {
+        if (notEmpty(entity)) {
             sql.append("JOIN sentiment_entities e ON e.document_id = d.id ");
             sql.append("WHERE d.org_id = ? AND e.text ILIKE ? ");
             params.add(orgId); params.add(entity);
@@ -279,10 +274,10 @@ public class SentimentPlugin extends WebroPlugin {
             sql.append("WHERE d.org_id = ? ");
             params.add(orgId);
         }
-        if (sourceType != null && !sourceType.isEmpty()) { sql.append("AND d.source_type = ? "); params.add(sourceType); }
-        if (label      != null && !label.isEmpty())      { sql.append("AND d.label = ? ");       params.add(label); }
-        if (fromDate   != null && !fromDate.isEmpty())   { sql.append("AND d.published_at >= ?::date "); params.add(fromDate); }
-        if (toDate     != null && !toDate.isEmpty())     { sql.append("AND d.published_at <  ?::date "); params.add(toDate); }
+        if (notEmpty(sourceType)) { sql.append("AND d.source_type = ? ");        params.add(sourceType); }
+        if (notEmpty(label))      { sql.append("AND d.label = ? ");              params.add(label); }
+        if (notEmpty(fromDate))   { sql.append("AND d.published_at >= ?::date "); params.add(fromDate); }
+        if (notEmpty(toDate))     { sql.append("AND d.published_at <  ?::date "); params.add(toDate); }
         sql.append("ORDER BY d.published_at DESC NULLS LAST, d.analyzed_at DESC LIMIT ?");
         params.add(limit);
 
@@ -293,8 +288,6 @@ public class SentimentPlugin extends WebroPlugin {
 
     private void persistFromApi(String orgId, String sourceType, Map<String, Object> body,
                                 String text, Map<String, Object> parsed, String rawResponse) {
-        // Delegated to ETL save logic via direct SQL — this is a thin shim for one-off API calls.
-        // Production batch usage should go through the sentiment_save ETL stage.
         String publishedAt = body.get("published_at") != null ? String.valueOf(body.get("published_at")) : null;
         String sourceUrl   = body.get("source_url")   != null ? String.valueOf(body.get("source_url"))   : null;
         String author      = body.get("author")       != null ? String.valueOf(body.get("author"))       : null;
@@ -320,19 +313,20 @@ public class SentimentPlugin extends WebroPlugin {
     }
 
     private static String sanitizeBucket(String b) {
-        return switch (b == null ? "day" : b.toLowerCase()) {
-            case "hour"  -> "hour";
-            case "week"  -> "week";
-            case "month" -> "month";
-            default      -> "day";
-        };
+        String v = b == null ? "day" : b.toLowerCase();
+        if ("hour".equals(v))  return "hour";
+        if ("week".equals(v))  return "week";
+        if ("month".equals(v)) return "month";
+        return "day";
     }
 
     private static boolean parseBool(Object o, boolean def) {
         if (o == null) return def;
-        if (o instanceof Boolean b) return b;
+        if (o instanceof Boolean) return (Boolean) o;
         return Boolean.parseBoolean(String.valueOf(o));
     }
+
+    private static boolean notEmpty(String s) { return s != null && !s.isEmpty(); }
 
     private static Response bad(String msg) {
         return Response.status(400).entity(Map.of("error", msg)).build();
